# gdigs-low-pipe

./: LICENSE  README.md  pyproject.toml
src/gdigs_low_pipe/calibration/: baseline.py  fluxcal.py
src/gdigs_low_pipe/cli/: eq2gal.py  run_pipe.py  stack.py
src/gdigs_low_pipe/pipeline/: __init__.py  cal_pipe.py  eq2gal.py  stack.py
src/gdigs_low_pipe/rfi/: __init__.py  arpls.py
src/gdigs_low_pipe/sdfits/: __init__.py  core.py
src/gdigs_low_pipe/utils/: core.py
src/gdigs_low_pipe/utils/tests/: test_core.py
