[project]
name = "gdigs-low-pipe"
version = "0.0.1"
authors = [
  { name="Pedro Salas", email="psalas@nrao.edu" },
]
description = "Data reduction pipeline for the GBT Diffuse Ionized Survey at Low-frequencies (GDIGS-Low)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "astropy",
  "numpy",
  "scipy",
  "numba",
  "bottleneck",
  "dysh==0.1.0"
]

[project.urls]
Homepage = "https://github.com/astrofle/gdigs-low-pipe"
Issues = "https://github.com/astrofle/gdigs-low-pipe/issues"


[project.scripts]
run_pipe = "gdigs_low_pipe.cli.run_pipe:main"
stack = "gdigs_low_pipe.cli.stack:main"
eq2gal = "gdigs_low_pipe.cli.eq2gal:main"
